stop using the string templates preview feature